intro et graphs maj

--- a/style.css
+++ b/style.css
@@ -37,3 +37,21 @@ button {
     border-color: white;
     border-style: none;
 }
+
+
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.chart{
+    padding : 2rem;
+    border: 1px solid #fff;
+    border-radius: 1rem;
+    background:  #251c35;
+    box-shadow : 0 0 16px rgba(0,0,0,0.8);
+    margin: 50px;
+}
+
+
